<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="btnhelp_search_menu">Help</string>
    <string name="btnsearch_search_menu">Search</string>
    <string name="hint_search_expid">Experiment ID</string>
    <string name="hint_search_pubmed">Pubmed ID</string>
    <string name="hint_search_typedata">Type of data</string>
    <string name="hint_search_species">Species</string>
    <string name="hint_search_genrel">Genome Release</string>
    <string name="hint_search_cell">Cell line</string>
    <string name="hint_search_devstage">Development stage</string>
    <string name="hint_search_sex">Sex</string>
    <string name="hint_search_tissue">Tissue</string>
    <string name="hint_search_antname">Antigen name</string>
    <string name="hint_search_antsymb">Antigen symbol</string>
    <string name="hint_search_antibody">Antibody</string>
    <string name="app_name">Genomizer</string>
    <string name="genomizer">GENOMIZER</string>
    
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="selected_str">SELECTED FILES</string>
    <string name="process_str">PROCESS STATUS</string>
    <string name="exp_info">EXPERIMENT FILES</string>
    <string name="raw_data">RAW DATA</string>
    <string name="profile_data">PROFILE DATA</string>
    <string name="region_data">REGION DATA</string>
    <string name="search_str">SEARCH FILES</string>
    <string name="convert_str">CONVERT TO PROFILE</string>
    <string name="enter_username">Enter username</string>
    <string name="convert">Add to selection</string>
    <string name="password_dots">••••••</string>
    <string name="results">SEARCH RESULTS</string>
    <string name="title_activity_experiment_list">ExperimentListActivity</string>
    <string name="btn_search_footer">Search</string>
    <string name="preference_file_key">se.umu.cs.pvt151.PREFERENCE_FILE_KEY</string>
    
    <string name="workspace_title">Workspace</string>
    <string name="hello_world">Hello world</string>
    <string name="search_settings">Search settings</string>
    <string name="btnworkspace_main_menu">Selected files</string>
    <string name="btnprocesses_main_menu">Process Status</string>
    <string name="select_searchsettings">Select annotations to display in search results</string>
    <string name="save_settings">Save settings</string>
    <string name="use_default">Use default</string>
    <string name="action_search_editPub">Edit pubmed string</string>
    <string name="search_button_text">Search</string>
    <string name="free_text_pubmed">Pubmed Query</string>
    
    <!-- <Start> Settings activity/fragment -->
    <string name="action_settings">Settings</string>
    <string name="action_settings_add">Add new URL</string>
    <string name="action_settings_remove">Remove selected URL</string>
    <string name="action_settings_edit">Edit selected URL</string>
	
	
    <string-array name="server_list">
        <item>http://genomizer.apiary-mock.com/</item>
        <item>http://scratchy.cs.umu.se:7000/</item>
        <item>http://scratchy.cs.umu.se:7050/</item>
        <item>http://scratchy.cs.umu.se:8050/</item>
        <item>http://scratchy.cs.umu.se:60000/</item>
    </string-array>
  
    <string name="settings_fileAnchor">Settings</string>
    <string name="settings_serverSelectedURLAnchor">selectedURL</string>
    <string name="settings_serverALLURLAnchor">savedURLs</string>
    	
	 <!-- <End> Settings activity/fragment -->
	 
     
	 <!--  <Start> Activty header strings -->
    <string name="title_activity_search_settings">Search Result Settings</string>
    <string name="title_activity_search_pubmed">Pubmed Query</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_result">Search Results</string>
    <string name="title_activity_work_space">Selected Files</string>
	<!--  <End> Activty header strings -->
	
	<!-- <Start> Process activity/fragment -->
    <string name="process_expname">Experiment: </string>
    <string name="process_author">Author: </string>
    <string name="process_status">Status: </string>
    <string name="process_added">Process added: </string>
    <string name="process_started">Process started: </string>
    <string name="process_finished">Process finished: </string>
	 <!-- <End> Process activity/fragment -->
	 
	 <!-- <Start> Process activity/fragment -->
    <string name="selected_raw_convert">Convert to Profile</string>
    <string name="selected_remove">Remove Marked Files</string>
	 <!-- <End> Process activity/fragment -->

</resources>
