<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.umu.cs.pvt151.SearchActivity" >

    <item 
        android:id="@+id/btnprocesses_main_menu"
        android:title="@string/btnprocesses_main_menu"
        android:icon="@drawable/process"
        android:showAsAction="always"
        />
    
    <item 
        android:id="@+id/btnworkspace_main_menu	"
        android:icon="@drawable/briefcase"
        android:title="@string/btnworkspace_main_menu"
        android:showAsAction="always"
        />
    
    <item 
        android:id="@+id/btnsearch_main_menu"
        android:icon="@drawable/zoom"
        android:title="@string/btnsearch_search_menu"
        android:showAsAction="always"
        />
      <item
        android:id="@+id/action_search_editPub"
        android:orderInCategory="100"
        android:title="@string/action_search_editPub"
        app:showAsAction="never"/>
      

</menu>
