<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView 
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_username" />
    
    <TextView 
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="**********"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logInButton"
        android:text="@string/sign_in"
        android:layout_margin="15dp"
        android:onClick="login" />

</LinearLayout>
