<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.searchview.SearchActivity" >

   
    
    <item 
        android:id="@+id/btnworkspace_main_menu	"
        android:icon="@drawable/workspace"
        android:title="@string/btnworkspace_main_menu"
        android:showAsAction="always"
        />
    
    <item 
        android:id="@+id/btnsearch_main_menu"
        android:icon="@drawable/search"
        android:title="@string/btnsearch_search_menu"
        android:showAsAction="always"
        />
    
    <item 
        android:id="@+id/btnprocesses_main_menu"
        android:title="@string/btnprocesses_main_menu"
        android:showAsAction="never"
        />
    
  
   
    

</menu>
